# libalmath

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  README  almath.i  almath.pml  almath.py  qibuild.cmake  qibuild.manifest  qiproject.xml  setup.py
almath/: api.h  config.h.in
almath/collisions/: allinecollisions.cpp  allinecollisions.h  avoidfootcollision.h  convexhull.cpp  convexhull.h  isinsidepolygon.h
almath/dsp/: digitalfilter.h  pidcontroller.h
almath/geometrics/: shape.h  shapes2d.h  shapes3d.h  shapes3d_utils.h
almath/geometry/: geometry.hpp  tools.hpp
almath/interpolation/: alinterpolation.h  alinterpolationarticular.cpp  alinterpolationarticular.h  alinterpolationbezier.cpp  alinterpolationbezier.h  alinterpolationcartesian.cpp  alinterpolationcartesian.h  alinterpolationcubicspline.cpp  alinterpolationcubicspline.h  alinterpolationlinear.cpp  alinterpolationlinear.h  alinterpolationsmooth.cpp  alinterpolationsmooth.h  alinterpolationspline.cpp  alinterpolationspline.h  alinterpolationtypes.h  alinterpolationutils.cpp  alinterpolationutils.h
almath/interpolations/: alinterpolation.h  alinterpolationarticular.h  alinterpolationbezier.h  alinterpolationcartesian.h  alinterpolationcubicspline.h  alinterpolationlinear.h  alinterpolationsmooth.h  alinterpolationspline.h  alinterpolationtypes.h  alinterpolationutils.h
almath/scenegraph/: almatheigen.h  almathqigeometry.hpp  bodymass.h  colladabuilder.h  colladascenebuilder.h  eigen.h  gltf.h  mesh.h  meshfactory.h  qianim.h  qigeometry.h  qirosmsg.h  qirostime.h  rigidbodysystembuilder.h  scenebuilder.h  urdf.h  urdfeigen.h  urdfrigidbodysystemtraverser.h
almath/scenegraph/qianim/: bezierautotangent.h  surgeon.h  unit.h  unitutils.h
almath/tools/: aldubinscurve.cpp  aldubinscurve.h  almath.cpp  almath.h  almathio.cpp  almathio.h  alpolynomialsolver.cpp  alpolynomialsolver.h  alrandom.h  altransformhelpers.cpp  altransformhelpers.h  altrigonometry.cpp  altrigonometry.h  avoidfootcollision.h  mersennetwister.cpp  mersennetwister.h
almath/types/: alaxismask.h  aldisplacement.h  alpose2d.cpp  alpose2d.h  alposition2d.cpp  alposition2d.h  alposition3d.cpp  alposition3d.h  alposition6d.cpp  alposition6d.h  alpositionandvelocity.cpp  alpositionandvelocity.h  alquaternion.h  alrotation.cpp  alrotation.h  alrotation2d.cpp  alrotation2d.h  alrotation3d.cpp  alrotation3d.h  altransform.cpp  altransform.h  altransformandvelocity6d.h  alvelocity3d.cpp  alvelocity3d.h  alvelocity6d.cpp  alvelocity6d.h  occupancymapparams.h
doc/: changeLogALMath.txt  main.dox
geometry_module/: CMakeLists.txt
geometry_module/src/: registration.cpp
geometry_module/test/: test_geometry_module.cpp
python-almath/: README.md  setup.py  swig_py2.cmake  wheel_create.py
python-almath/almath/: __init__.py
python-geometry/: README.md  setup.py  wheel_create.py  wheel_upload.py
python-geometry/qigeometry/: __init__.py
qi/geometry/: api.hpp  geometry.idl.qi
src/collisions/: avoidfootcollision.cpp  convexhull.cpp  isinsidepolygon.cpp
src/dsp/: digitalfilter.cpp  pidcontroller.cpp
src/geometrics/: shapes2d.cpp  shapes3d.cpp  shapes3d_utils.cpp
src/geometry/: geometry.cpp  registration.cpp  tools.cpp
src/interpolations/: alinterpolationarticular.cpp  alinterpolationbezier.cpp  alinterpolationcartesian.cpp  alinterpolationcubicspline.cpp  alinterpolationlinear.cpp  alinterpolationsmooth.cpp  alinterpolationspline.cpp  alinterpolationutils.cpp
src/scenegraph/: colladabuilder.cpp  colladascenebuilder.cpp  mesh.cpp  meshfactory.cpp  qianim.cpp  scenebuilder.cpp  urdf.cpp  urdfrigidbodysystemtraverser.cpp
src/scenegraph/qianim/: surgeon.cpp
src/tools/: aldubinscurve.cpp  almath.cpp  almathio.cpp  altransformhelpers.cpp  avoidfootcollision.cpp
src/types/: alaxismask.cpp  aldisplacement.cpp  alpose2d.cpp  alposition2d.cpp  alposition3d.cpp  alposition6d.cpp  alpositionandvelocity.cpp  alquaternion.cpp  alrotation.cpp  alrotation2d.cpp  alrotation3d.cpp  altransform.cpp  altransformandvelocity6d.cpp  alvelocity3d.cpp  alvelocity6d.cpp  occupancymapparams.cpp
test/: CMakeLists.txt  almath_test.py  almathtestutils.cpp  almathtestutils.h  test_almathswig.py  testalmath.py
test/collisions/: avoidfootcollision_test.cpp  convexhull_test.cpp  isinsidepolygon_test.cpp
test/dsp/: digitalfilter_test.cpp  pidcontroller_test.cpp
test/geometrics/: test_shapes2d.cpp  test_shapes3d.cpp  test_shapes3d_utils.cpp
test/interpolation/: alinterpolationarticular_test.cpp  alinterpolationbezier_test.cpp  alinterpolationcartesian_test.cpp
test/scenegraph/: behavior.xar  behavior2.xar  box.xar  hello.qianim  hello_v1.qianim  myrigidbodysystembuilder.h  test_almatheigen.cpp  test_almathqigeometry.cpp  test_bodymass.cpp  test_bodymass_solidworks.cpp  test_eigen.cpp  test_gltf.cpp  test_qianim.cpp  test_qirosmsg.cpp  test_qirostime.cpp  test_rigidbodysystembuilder.cpp  test_urdf.cpp  test_urdfeigen.cpp  test_visualization3d.cpp
test/tools/: aldubinscurve_test.cpp  almath_test.cpp  alpolynomialsolver_test.cpp  altransformhelpers_test.cpp
test/types/: alaxismask_test.cpp  aldisplacement_test.cpp  alpose2d_test.cpp  alposition2d_test.cpp  alposition3d_test.cpp  alposition6d_test.cpp  alpositionandvelocity_test.cpp  alquaternion_test.cpp  alrotation2d_test.cpp  alrotation3d_test.cpp  alrotation_test.cpp  altransform_test.cpp  altransformandvelocity6d_test.cpp  alvelocity3d_test.cpp  alvelocity6d_test.cpp  occupancymapparams_test.cpp
